[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swirlc"
authors = [
    {name = "Iacopo Colonnelli", email = "iacopo.colonnelli@unito.it"},
    {name = "Doriana Medić", email = "doriana.medic@unito.it"},
    {name = "Alberto Mulone", email = "alberto.mulone@unito.it"}
]
description = "Scientific Workflow Intermediate Representation Language"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing"
]
dependencies = [
    "antlr4-python3-runtime==4.13.2",
    "black==26.5.1",
    "importlib_resources==7.1.0",
    "jsonschema==4.26.0",
    "referencing==0.37.0",
    "ruamel.yaml==0.19.1"
]
version = "0.0.1"

[dependency-groups]
dev = [
    {include-group = "bandit"},
    {include-group = "lint"},
    {include-group = "test"}
]
bandit = [
    "bandit==1.9.4"
]
lint = [
    "codespell==2.4.2",
    "pyupgrade==3.21.2",
    "ruff==0.15.18"
]
test = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0"
]

[project.scripts]
swirlc = "swirlc.main:run"

[project.urls]
Package = "https://pypi.org/project/swirlc"
Repository = "https://github.com/alpha-unito/swirlc"
Docker = "https://hub.docker.com/r/alphaunito/swirlc"

[tool.setuptools]
packages = [
    "swirlc",
    "swirlc.antlr",
    "swirlc.compiler",
    "swirlc.config",
    "swirlc.core",
    "swirlc.translator"
]
zip-safe = true

[tool.setuptools.package-data]
"swirlc.config" = ["schemas/v1.0/*.json"]

[tool.coverage.run]
branch = true
source_pkgs = ["swirlc"]
omit = ["swirlc/antlr/*"]

[tool.coverage.report]
exclude_lines = [
    # Exclude not implemented methods
    "raise NotImplementedError",
    # Exclude abstract methods
    "@(abc\\.)?abstractmethod",
    # Exclude Python script entrypoints
    "if __name__ == .__main__.:",
    # Exclude type checking lines
    "if TYPE_CHECKING:",
    # Exclude log messages
    "if logger.isEnabledFor"
]
ignore_errors = true
omit = [
    "swirlc/__main__.py",
    "tests/*"
]

[tool.black]
exclude = "swirlc/antlr"

[tool.ruff]
exclude = ["swirlc/antlr"]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I"]
ignore = ["E203", "E501", "B904"]
